--- a/style.css
+++ b/style.css
@@ -18,19 +18,17 @@ body {
    typography
    ================= */
 
-h1 {
+.header-title {
   font-size: 2.25rem;
   font-weight: 300;
   color: white;
   max-width: 300px;
+  margin: 2.5em 0;
 }
 
-h2 {
-  margin: 0;
-}
-
-h2, 
+.main-title, 
 .header-sub {
+  margin: 0;
   font-size: 1.3125rem;
 }
 
@@ -43,12 +41,6 @@ h2, strong { font-weight: 900; }
   font-weight: 900;
 }
 
-.top-text, 
-.fine-print {
-  font-size: 0.625rem;
-  letter-spacing: 1px;
-}
-
 .top-text {
   order: -1;
   margin: 0;
@@ -59,8 +51,18 @@ h2, strong { font-weight: 900; }
   text-transform: uppercase;
 }
 
+.top-text, 
+.fine-print {
+  font-size: 0.625rem;
+  letter-spacing: 1px;
+}
+
 .main-sub {
   margin-top: 0;
+}
+
+.fine-print {
+  max-width: 200px;
 }
 
 /* =================
@@ -81,12 +83,59 @@ header {
   background-position: center;
   background-size: cover;
   padding: 0 .5em 2em;
+  justify-content: space-between;
 }
 
 main {
   margin: 0 auto;
   padding: 2em 1em;
   max-width: 400px;
+}
+
+/* =================
+   form 
+   ================= */
+
+.email-collector {
+  /* border: 3px solid red; */
+  /* width: 80% together with max-width: 300px allow form to shrink at small screens 
+     and never exceed 300px at bigger screens */
+  width: 80%;
+  max-width: 300px;
+}
+/* Method of choosing specific inputs instead of all inputs */
+input[type="text"],
+input[type="email"] {
+  padding: 0.5em;
+  border: 1px solid #808080;
+  margin-bottom: 1em;
+  /* Forms don't inherit font props so adding this makes it happen */
+  text-align: inherit;
+  font-size: inherit;
+}
+
+input, 
+.btn {
+  width: 100%;
+  border-radius: 5px;
+  font-family: inherit;
+}
+
+.btn {
+  display: inline-block;
+  border: 0;
+  cursor: pointer;
+  padding: 1.25em 2.5em;
+  text-transform: uppercase;
+  font-size: 0.625rem;
+  font-weight: 900;
+  letter-spacing: 1px;
+}
+
+.btn-primary {
+  background: #fc4a1a;  /* fallback for old browsers */
+  background: linear-gradient(to left, #f7b733, #fc4a1a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: #fff;
 }
 
 /* =================
@@ -99,11 +148,18 @@ main {
     display: flex;
   }
   
-  h1 {
+  .header-title {
     font-size: 3.5rem;
+    max-width: 500px;
+    line-height: 1;
+  }
+
+  .header-title,
+  .header-sub {
+    margin: 0;
   }
   
-  h2, 
+  .main-title, 
   .header-sub {
     font-size: 1.75rem;
   }
@@ -111,7 +167,14 @@ main {
   header,
   main {
     width: 50%;
-
     min-height: 100vh;
+  }
+
+  main {
+    justify-content: center;
+  }
+
+  .btn {
+    font-size: 0.725rem;
   }
 }
